# vendasdigitais

./: .dockerignore  .env.example  .gitignore  BUILD_FIX_README.md  DEPLOY_FINAL.md  Dockerfile  Makefile  Procfile  README.md  README_DEPLOY.md  README_MODS.md  README_RAILWAY_DEPLOY.md  bot.py  bot_final_postgres.py  config.py  database_migration.py  deploy-guide.md  deploy_config.py  dockerfile  launch_railway_final.py  launch_railway_v2.py  launch_unified.py  main.py  models.py  nixpacks.toml  package-lock.json  package.json  production-config.py  pyproject.toml  railway.json  railway.toml  railway_whatsapp_config.js  requirements.txt  runtime_config.py  start.py  start.sh  start_railway.py  template_handlers.py  whatsapp_baileys_multi.js
config/: settings.py
core/: cache.py  exceptions.py  logging.py  monitoring.py  rate_limiting.py  retry.py  validators.py
handlers/: client_handlers.py  payment_handlers.py  user_handlers.py
services/: database_service.py  payment_service.py  scheduler_service.py  telegram_service.py  whatsapp_service.py
templates/: add_client.html  base.html  clients.html  dashboard.html  index.html  login.html  message_templates.py  payment.html  subscription.html
tests/: __init__.py  conftest.py
tests/test_core/: test_cache.py  test_validators.py
utils/: helpers.py
